[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/hauptmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/MusikSounds/deep-slow-beat-2-21098.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/lupe.jpg" type="Texture" id=3]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Musik_Sounds/Menu_Swap.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=3]
size = 61
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0509804, 0.0627451, 0.905882, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.0627451, 0.905882, 1 )

[node name="hauptmenu" type="Node2D"]
script = ExtResource( 1 )

[node name="hauptmenu" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
color = Color( 0.74902, 0.576471, 0.423529, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 460.0
margin_bottom = 540.0
rect_scale = Vector2( 0.8, 1 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 369.0
margin_right = 969.0
margin_bottom = 540.0

[node name="Menu1" type="VBoxContainer" parent="CenterContainer"]
margin_top = 89.0
margin_right = 600.0
margin_bottom = 450.0

[node name="Text" type="Label" parent="CenterContainer/Menu1"]
margin_right = 600.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.0509804, 0.0627451, 0.905882, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Daten-Detektiv"
align = 1

[node name="MINDESTABSTAND" type="Control" parent="CenterContainer/Menu1"]
margin_top = 78.0
margin_right = 600.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( -861, -116 )

[node name="FälleButton" type="Button" parent="CenterContainer/Menu1"]
margin_top = 142.0
margin_right = 600.0
margin_bottom = 191.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Fälle"

[node name="OptionsButton" type="Button" parent="CenterContainer/Menu1"]
margin_top = 195.0
margin_right = 600.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Optionen"

[node name="QuitButton" type="Button" parent="CenterContainer/Menu1"]
margin_top = 248.0
margin_right = 600.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Beenden"

[node name="MINDESTABSTAND2" type="Control" parent="CenterContainer/Menu1"]
margin_top = 301.0
margin_right = 600.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 60 )

[node name="Options" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 155.0
margin_top = 142.0
margin_right = 445.0
margin_bottom = 397.0

[node name="Text" type="Label" parent="CenterContainer/Options"]
margin_right = 490.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.0509804, 0.0627451, 0.905882, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Optionen"
align = 1

[node name="MINDESTABSTAND" type="Control" parent="CenterContainer/Options"]
margin_top = 78.0
margin_right = 490.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( -861, -116 )

[node name="BackButton" type="Button" parent="CenterContainer/Options"]
margin_top = 142.0
margin_right = 490.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Zurück"

[node name="MINDESTABSTAND2" type="Control" parent="CenterContainer/Options"]
margin_top = 195.0
margin_right = 490.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 60 )

[node name="Faelle" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_top = 89.0
margin_right = 600.0
margin_bottom = 450.0

[node name="Text" type="Label" parent="CenterContainer/Faelle"]
margin_right = 600.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.0509804, 0.0627451, 0.905882, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Los gehts!"
align = 1

[node name="MINDESTABSTAND" type="Control" parent="CenterContainer/Faelle"]
margin_top = 78.0
margin_right = 600.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( -861, -116 )

[node name="TutorialButton" type="Button" parent="CenterContainer/Faelle"]
margin_top = 142.0
margin_right = 600.0
margin_bottom = 191.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Tutorial"

[node name="Level1Button" type="Button" parent="CenterContainer/Faelle"]
margin_top = 195.0
margin_right = 600.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 5 )
text = " Fall 1"

[node name="BackButton" type="Button" parent="CenterContainer/Faelle"]
margin_top = 248.0
margin_right = 600.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Zurück"

[node name="MINDESTABSTAND2" type="Control" parent="CenterContainer/Faelle"]
margin_top = 301.0
margin_right = 600.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 60 )

[node name="BGM Menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="Menu_Swap" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="CenterContainer/Menu1/FälleButton" to="." method="_on_FlleButton_pressed"]
[connection signal="pressed" from="CenterContainer/Menu1/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/Menu1/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CenterContainer/Options/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CenterContainer/Faelle/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/Faelle/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="CenterContainer/Faelle/BackButton" to="." method="_on_BackButton_pressed"]
